# azure-credit-risk-agent

./: .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  main.py  prometheus.yml  pyproject.toml
.github/workflows/: CI-CD.yml  agent-eval.yml  cd.yml  ci.yml
Scripts/: embed_and_upload.py
agents/: azure_openai_provider.py  base_llm_agent.py  decision_agent.py  explanation_agent.py  llm_provider.py  ollama_provider.py  policy_agent.py  risk_agent.py
agents/prompts/: explanation_prompt.txt  policy_prompt.txt  risk_prompt.txt
agents/search/: policy_search.py
agents/tools/: policy_search.py  policy_tool.py  risk_tools.py
api/: dependencies.py  error_handler.py  factories.py  logging.py  main.py  routes.py
benchmark/: benchmark.py
config/: llm_costs.py  token_budget.py  validate_budget.py
contracts/: credit_application.py  decision_output.py  explanation_output.py  graph_state.py  policy_output.py  risk_output.py
contracts/agents/: decision_agent_contract.py  (+3 more)
evaluation/: agent_metrics.py  decision_metrics.py  eval_report.json  eval_report.md  metrics.py  metrics_report.py  rag_metrics.py  registry.py  run_eval.py  thresholds.json
frontend/: index.html
graph/: builder.py  conditions.py  nodes.py
infra/: budget_context.py  prompt_guard.py  rag_guard.py  token_counter.py  token_tracker.py
monitoring/: prometheus_metrics.py
tests/: test_cost_calculation.py  test_credit_application.py  test_decision_output.py  test_graph_state.py  test_policy_output.py  test_policy_search_client.py  test_risk_output.py  verify_azure_migration.py
(+14 files in other folders)
